Updated codelite project so it builds cximage again.

--- a/Modules/Image/Linux/Image.project
+++ b/Modules/Image/Linux/Image.project
@@ -520,64 +520,64 @@
         <File Name="../../../Contrib/CxImage/zlib/compress.c"/>
         <File Name="../../../Contrib/CxImage/zlib/adler32.c"/>
       </VirtualDirectory>
-      <VirtualDirectory Name="CxImage">
-        <File Name="../../../Contrib/CxImage/CxImage/xmemfile.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/xmemfile.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/xiofile.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximawnd.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximawmf.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximawmf.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximawbmp.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximawbmp.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximatran.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximatif.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximatif.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximath.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximath.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximatga.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximatga.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaska.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaska.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximasel.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaraw.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaraw.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapsd.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapsd.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapng.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapng.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapcx.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapcx.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximapal.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximamng.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximamng.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximalyr.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximalpha.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximajpg.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximajpg.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximajbg.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximajbg.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximajas.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximajas.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaiter.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaint.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximainfo.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaico.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaico.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximahist.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximagif.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximagif.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximage.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximage.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaexif.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximaenc.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximadsp.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximadef.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximacfg.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximabmp.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/ximabmp.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/xfile.h"/>
-        <File Name="../../../Contrib/CxImage/CxImage/tif_xfile.cpp"/>
-        <File Name="../../../Contrib/CxImage/CxImage/stdint.h"/>
+      <VirtualDirectory Name="ximage">
+        <File Name="../../../Contrib/CxImage/ximage/xmemfile.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/xmemfile.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/xiofile.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximawnd.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximawmf.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximawmf.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximawbmp.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximawbmp.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximatran.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximatif.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximatif.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximath.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximath.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximatga.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximatga.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaska.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaska.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximasel.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaraw.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaraw.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapsd.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapsd.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapng.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapng.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapcx.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapcx.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximapal.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximamng.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximamng.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximalyr.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximalpha.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximajpg.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximajpg.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximajbg.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximajbg.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximajas.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximajas.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaiter.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaint.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximainfo.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaico.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaico.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximahist.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximagif.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximagif.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximage.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximage.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaexif.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximaenc.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximadsp.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximadef.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximacfg.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximabmp.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/ximabmp.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/xfile.h"/>
+        <File Name="../../../Contrib/CxImage/ximage/tif_xfile.cpp"/>
+        <File Name="../../../Contrib/CxImage/ximage/stdint.h"/>
       </VirtualDirectory>
     </VirtualDirectory>
   </VirtualDirectory>
