--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,17 +36,17 @@ jobs:
     - uses: actions/checkout@master
     - uses: seanmiddleditch/gha-setup-ninja@master
     - uses: ilammy/msvc-dev-cmd@v1.2.0
-    - name: Build CMake Ninja
+    - name: Build CMake NMakeMakefiles
       run: |
         # cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
         # .\MSBuild.exe $Env:GITHUB_WORKSPACE\UnitTests\Windows\UnitTests.sln
         # dir
         echo '*** Configuring CMake ***'
-        mkdir buildninja
-        cd buildninja
-        cmake .. -DCMAKE_BUILD_TYPE=Release -G Ninja
-        echo '*** Ninja Build ***'
-        ninja install
+        mkdir buildnmake
+        cd buildnmake
+        cmake .. -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles"
+        echo '*** NMake Build ***'
+        nmake install
         # & 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe' $Env:GITHUB_WORKSPACE\UnitTests\Windows\UnitTests.sln
         echo '*** Done Building ***'
     
