--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,9 @@ jobs:
         echo '*** Configuring CMake ***'
         mkdir buildninja
         cd buildninja
-        cmake .. -DCMAKE_BUILD_TYPE=Release -GNinja
+        #cmake .. -DCMAKE_BUILD_TYPE=Release -GNinja
         echo '*** Ninja Build ***'
-        ninja install
+        #ninja install
         echo '*** Done Building ***'
 #
 #        echo 'Build Using Make'
