Fixed case sensitivity issue with Linux that I didn't notice in WSL.

--- a/Contrib/CxImage/CMakeLists.txt
+++ b/Contrib/CxImage/CMakeLists.txt
@@ -62,60 +62,60 @@ add_library(
 
 	# JPeg
 	Src/jpeg/jaricom.c
-	Src/jpeg/Jcapimin.c
-	Src/jpeg/Jcapistd.c
+	Src/jpeg/jcapimin.c
+	Src/jpeg/jcapistd.c
 	Src/jpeg/jcarith.c
-	Src/jpeg/Jccoefct.c
-	Src/jpeg/Jccolor.c
-	Src/jpeg/Jcdctmgr.c
-	Src/jpeg/Jchuff.c
-	Src/jpeg/Jcinit.c
-	Src/jpeg/Jcmainct.c
-	Src/jpeg/Jcmarker.c
-	Src/jpeg/Jcmaster.c
-	Src/jpeg/Jcomapi.c
-	Src/jpeg/Jconfig.h
-	Src/jpeg/Jcparam.c
-	Src/jpeg/Jcprepct.c
-	Src/jpeg/Jcsample.c
-	Src/jpeg/Jctrans.c
-	Src/jpeg/Jdapimin.c
-	Src/jpeg/Jdapistd.c
+	Src/jpeg/jccoefct.c
+	Src/jpeg/jccolor.c
+	Src/jpeg/jcdctmgr.c
+	Src/jpeg/jchuff.c
+	Src/jpeg/jcinit.c
+	Src/jpeg/jcmainct.c
+	Src/jpeg/jcmarker.c
+	Src/jpeg/jcmaster.c
+	Src/jpeg/jcomapi.c
+	Src/jpeg/jconfig.h
+	Src/jpeg/jcparam.c
+	Src/jpeg/jcprepct.c
+	Src/jpeg/jcsample.c
+	Src/jpeg/jctrans.c
+	Src/jpeg/jdapimin.c
+	Src/jpeg/jdapistd.c
 	Src/jpeg/jdarith.c
-	Src/jpeg/Jdatadst.c
-	Src/jpeg/Jdatasrc.c
-	Src/jpeg/Jdcoefct.c
-	Src/jpeg/Jdcolor.c
-	Src/jpeg/Jdct.h
-	Src/jpeg/Jddctmgr.c
-	Src/jpeg/Jdhuff.c
-	Src/jpeg/Jdinput.c
-	Src/jpeg/Jdmainct.c
-	Src/jpeg/Jdmarker.c
-	Src/jpeg/Jdmaster.c
-	Src/jpeg/Jdmerge.c
-	Src/jpeg/Jdpostct.c
-	Src/jpeg/Jdsample.c
-	Src/jpeg/Jdtrans.c
-	Src/jpeg/Jerror.c
-	Src/jpeg/Jerror.h
-	Src/jpeg/Jfdctflt.c
-	Src/jpeg/Jfdctfst.c
-	Src/jpeg/Jfdctint.c
-	Src/jpeg/Jidctflt.c
-	Src/jpeg/Jidctfst.c
-	Src/jpeg/Jidctint.c
-	Src/jpeg/Jinclude.h
-	Src/jpeg/Jmemmgr.c
-	Src/jpeg/Jmemnobs.c
-	Src/jpeg/Jmemsys.h
-	Src/jpeg/Jmorecfg.h
-	Src/jpeg/Jpegint.h
-	Src/jpeg/Jpeglib.h
-	Src/jpeg/Jquant1.c
-	Src/jpeg/Jquant2.c
-	Src/jpeg/Jutils.c
-	Src/jpeg/Jversion.h
+	Src/jpeg/jdatadst.c
+	Src/jpeg/jdatasrc.c
+	Src/jpeg/jdcoefct.c
+	Src/jpeg/jdcolor.c
+	Src/jpeg/jdct.h
+	Src/jpeg/jddctmgr.c
+	Src/jpeg/jdhuff.c
+	Src/jpeg/jdinput.c
+	Src/jpeg/jdmainct.c
+	Src/jpeg/jdmarker.c
+	Src/jpeg/jdmaster.c
+	Src/jpeg/jdmerge.c
+	Src/jpeg/jdpostct.c
+	Src/jpeg/jdsample.c
+	Src/jpeg/jdtrans.c
+	Src/jpeg/jerror.c
+	Src/jpeg/jerror.h
+	Src/jpeg/jfdctflt.c
+	Src/jpeg/jfdctfst.c
+	Src/jpeg/jfdctint.c
+	Src/jpeg/jidctflt.c
+	Src/jpeg/jidctfst.c
+	Src/jpeg/jidctint.c
+	Src/jpeg/jinclude.h
+	Src/jpeg/jmemmgr.c
+	Src/jpeg/jmemnobs.c
+	Src/jpeg/jmemsys.h
+	Src/jpeg/jmorecfg.h
+	Src/jpeg/jpegint.h
+	Src/jpeg/jpeglib.h
+	Src/jpeg/jquant1.c
+	Src/jpeg/jquant2.c
+	Src/jpeg/jutils.c
+	Src/jpeg/jversion.h
 
 	# Png
 	Src/png/png.c
