Better version number handling.

--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -12,6 +12,7 @@ project(Foundation VERSION ${TACENT_VERSION} LANGUAGES CXX)
 # CMakeLists looks a little more familiar.
 add_library(
 	${PROJECT_NAME}
+	Src/project_tacent_version.cpp
 	Src/tAssert.cpp
 	Src/tBitArray.cpp
 	Src/tMemory.cpp
@@ -20,6 +21,7 @@ add_library(
 	Src/tStandard.cpp
 	Src/tString.cpp
 	Src/tUnits.cpp
+	Inc/Foundation/project_tacent_version.cmake.h
 	Inc/Foundation/tArray.h
 	Inc/Foundation/tAssert.h
 	Inc/Foundation/tBitArray.h
@@ -35,7 +37,6 @@ add_library(
 	Inc/Foundation/tStandard.h
 	Inc/Foundation/tString.h
 	Inc/Foundation/tUnits.h
-	Inc/Foundation/tVersion.h
 )
 
 tacent_target_include_directories(${PROJECT_NAME})
