--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
       
     # Use CMake and NMake
-    - uses: actions/checkout@master
+    #- uses: actions/checkout@master
     - uses: ilammy/msvc-dev-cmd@v1.2.0
     - name: Build using CMake NMake
       run: |
