--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,17 +3,38 @@
 	// Hover to view descriptions of existing attributes.
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
-	"configurations": [
+	"configurations":
+	[
 		{
-			"name": "(Windows) Launch",
-			"type": "cppvsdbg",
+			"name": "Launch GDB",
+			"type": "cppdbg",
 			"request": "launch",
-			"program": "enter program name, for example ${workspaceFolder}/a.exe",
+			"program": "${workspaceFolder}/build/TacentInstall/UnitTests",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}",
+			"cwd": "${workspaceFolder}/build/TacentInstall",
 			"environment": [],
-			"externalConsole": false
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands":
+			[
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				}
+			]
+		},
+		{
+			"name": "Launch Windows",
+			"type": "cppvsdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/build/TacentInstall/UnitTests.exe",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}/build/TacentInstall",
+			"environment": [],
+			"externalConsole": false,
 		}
 	]
 }
